--- a/account_statement_import_online_qonto/view/online_bank_statement_provider.xml
+++ b/account_statement_import_online_qonto/view/online_bank_statement_provider.xml
@@ -3,10 +3,10 @@
     <record model="ir.ui.view" id="online_bank_statement_provider_form">
         <field name="name">online.bank.statement.provider.form</field>
         <field name="model">online.bank.statement.provider</field>
-        <field name="inherit_id" ref="account_bank_statement_import_online.online_bank_statement_provider_form"/>
+        <field name="inherit_id" ref="account_statement_import_online.online_bank_statement_provider_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//page[@name='configuration']" position="inside">
-                <group name="qonto" attrs="{'invisible':[('service','!=','qonto')]}">
+            <xpath expr="//group[@name='configuration']" position="before">
+                <group name="qonto" attrs="{'invisible':[('service','!=','qonto')]}" string="Qonto">
                     <field name="username" string="Login"/>
                     <field name="password" string="Key"/>
                 </group>
